--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -1,9 +1,13 @@
 
-{% extends 'front/base.html.twig' %}
+
+{% extends 'base.html.twig' %}
 
 {% block title %}Accueil{% endblock %}
 
 {% block body %}
-<h1>Bienvenue sur mon site</h1>
-<p>Voici la page d'accueil de notre projet.</p>
+<div class="text-center">
+    <h1 class="animate__animated animate__fadeInDown">Bine ați venit la My Application!</h1>
+    <p class="animate__animated animate__fadeIn animate__delay-1s">O aplicație modernă pentru gestionarea articolelor și comentariilor.</p>
+    <img src="https://via.placeholder.com/800x400.png?text=Developer+Image" class="img-fluid mt-4" alt="Developer Image">
+</div>
 {% endblock %}
