--- a/templates/admin/create_admin.html.twig
+++ b/templates/admin/create_admin.html.twig
@@ -1,3 +1,5 @@
+
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Create Admin{% endblock %}
@@ -6,9 +8,15 @@
 <h1>Create Admin</h1>
 
 {{ form_start(form) }}
-    {{ form_row(form.username) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.password) }}
+    <div class="mb-3">
+        {{ form_row(form.username, {'attr': {'class': 'form-control'}}) }}
+    </div>
+    <div class="mb-3">
+        {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
+    </div>
+    <div class="mb-3">
+        {{ form_row(form.password, {'attr': {'class': 'form-control'}}) }}
+    </div>
     <button type="submit" class="btn btn-primary">Create</button>
 {{ form_end(form) }}
 
