--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="{{ path('admin_articles') }}">Articole</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('login') }}">Conectare</a>
+                        <a class="nav-link" href="{{ path('app_login') }}">Conectare</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('contact') }}">Contact</a>
