--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,10 +24,10 @@
                         <a class="nav-link" href="{{ path('info') }}">Info</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('admin_articles') }}">Articole</a>
+                        <a class="nav-link" href="{{ path('articles') }}">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('login') }}">Conectare</a>
+                        <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('contact') }}">Contact</a>
@@ -43,7 +43,7 @@
 
     <footer class="bg-light text-center mt-4 p-3">
         <div class="container">
-            <p class="animate__animated animate__bounce">© 2024 My Application. Toate drepturile rezervate.</p>
+            <p class="animate__animated animate__bounce">© 2024 Simona.</p>
         </div>
     </footer>
 
