--- a/templates/front/contact.html.twig
+++ b/templates/front/contact.html.twig
@@ -5,10 +5,10 @@
 {% block title %}Contact{% endblock %}
 
 {% block body %}
-<h1>Contactați-ne</h1>
+<h1>Contactez nous</h1>
 <form>
     <div class="mb-3">
-        <label for="name" class="form-label">Nume</label>
+        <label for="name" class="form-label">Nom</label>
         <input type="text" class="form-control" id="name" required>
     </div>
     <div class="mb-3">
@@ -16,9 +16,9 @@
         <input type="email" class="form-control" id="email" required>
     </div>
     <div class="mb-3">
-        <label for="message" class="form-label">Mesaj</label>
+        <label for="message" class="form-label">Message</label>
         <textarea class="form-control" id="message" rows="3" required></textarea>
     </div>
-    <button type="submit" class="btn btn-primary">Trimite</button>
+    <button type="submit" class="btn btn-primary">Envoy</button>
 </form>
 {% endblock %}
