--- a/templates/front/info.html.twig
+++ b/templates/front/info.html.twig
@@ -2,9 +2,9 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Informații{% endblock %}
+{% block title %}Info{% endblock %}
 
 {% block body %}
-<h1>Informații despre proiect</h1>
-<p>Aceasta este o aplicație construită cu Symfony și Bootstrap.</p>
+<h1>Bonjour!</h1>
+<p>Bienvenue sur mon project Symfony-Bootstrap.</p>
 {% endblock %}
