--- a/templates/article/articles.html.twig
+++ b/templates/article/articles.html.twig
@@ -2,10 +2,10 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Manage Articles{% endblock %}
+{% block title %}Articles{% endblock %}
 
 {% block body %}
-<h1>Manage Articles</h1>
+<h1>Articles</h1>
 <div class="mb-3">
     <a href="{{ path('create_article') }}" class="btn btn-success">Create New Article</a>
 </div>
